--- a/DPM/pom.xml
+++ b/DPM/pom.xml
@@ -164,13 +164,19 @@
 		<dependency>
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-redis</artifactId>
-		    <version>1.8.6.RELEASE</version>
+		    <version>1.7.1.RELEASE</version>
 		</dependency>
 		<dependency>
 		    <groupId>redis.clients</groupId>
 		    <artifactId>jedis</artifactId>
 		    <version>2.9.0</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session</artifactId>
+            <version>1.3.1.RELEASE</version>
+        </dependency>
 	
 		<!-- Test -->
 		<dependency>
